--- a/public/files/css/view.less
+++ b/public/files/css/view.less
@@ -39,7 +39,7 @@
 #conclines {
   background-color: white;
   font-size: 10pt;
-  font-family: 'Roboto Condensed';
+  font-family: 'Roboto Condensed', 'Segoe UI', sans-serif;
 
   .manual-selection input.error {
       background-color: @color-logo-pink;
